# Sensing

./: .coding-guideline-manifest.txt  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SPECIFICATION.md  config.toml.example  eslint.config.js  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: labeler.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  build.md  chore.md  ci.md  documentation.md  feature.md  feature_request.md  fix.md  performance.md  refactor.md  revert.md  style.md  test.md
.github/workflows/: auto-label-major.yml  check-links.yml  check-pr-title.yml  gemini-review.yml  labeler.yml  release-drafter.yml  test-setup-script.yml  test.yml
sensing/: __init__.py  concurrency.py  nmea_parser.py
sensing/gnss/: __init__.py  reader.py  types.py
sensing/imu/: __init__.py  reader.py  types.py
sensing/nmea/: __init__.py  checksum.py  fields.py  formatter.py  gga.py  types.py  vtg.py
sensing/ntrip/: __init__.py  client.py  config.py
server/: __init__.py  broadcaster.py  config.py  formatters.py  main.py  sensors.py
server/static/: accel-scatter.js  app.js  gnss.js  index.html  yaw-compass-draw.js  yaw-compass.js
tests/: test_nmea_parser.py
tests/concurrency/: __init__.py  test_repeating_task.py
tests/gnss/: test_reader.py
tests/imu/: test_reader.py
tests/nmea/: __init__.py  test_checksum.py  test_formatter.py  test_gga.py  test_vtg.py
tests/ntrip/: test_client.py
tests/server/: __init__.py  conftest.py  helpers.py  test_config.py  test_websocket_connections.py  test_websocket_routing.py
